# codesearch

./: .dockerignore  .env.codesearch.example  .env.example  .gitignore  ARCHITECTURE_ANALYSIS_REPORT.md  CLAUDE.md  Cargo.toml  DESIGN-191-handler-refactor.md  Dockerfile  Dockerfile.outbox-processor  EXTRACTION_STATUS_REPORT.md  PLAN-191-handler-refactor.md  PLAN-fix-rust-extractor.md  README.md  REMAINING_ISSUES.md  RUST_EXTRACTION_ANALYSIS.md  RUST_RELATIONSHIP_ANALYSIS.md  STRING_PARSING_ELIMINATION_PLAN.md  cleanup-test-resources.sh  codesearch.toml  docker-compose.yml  package.json  test_phase3.sh  test_phase4.sh  test_search.sh
crates/agentic-search/: Cargo.toml
crates/agentic-search/src/: config.rs  content_selection.rs  error.rs  lib.rs  orchestrator.rs  prompts.rs  types.rs  worker.rs
crates/agentic-search/tests/: integration_test.rs
crates/api-service/: Cargo.toml
crates/api-service/src/: embedding_operations.rs  entity_operations.rs  fulltext_search.rs  graph_search.rs  lib.rs  models.rs  semantic_search.rs  unified_search.rs
crates/cli/: Cargo.toml
crates/cli/src/: docker.rs  infrastructure.rs  init.rs  lib.rs  main.rs  storage_init.rs
crates/cli/tests/: auto_indexing_tests.rs  drop_command_test.rs  e2e_benchmarks.rs  e2e_tests.rs  ensure_storage_initialized_integration_test.rs  infrastructure_tests.rs  init_integration.rs  mcp_server_test.rs  storage_init_tests.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  entities.rs  entity_id.rs  error.rs  lib.rs  project_manifest.rs  qualified_name.rs  resolution.rs  search_api.rs  search_models.rs
crates/core/tests/: config_test.rs
crates/e2e-tests/: Cargo.toml  graph_eval_report.json  nushell_eval_report.json
crates/e2e-tests/data/: balanced_evaluation_ground_truth_20.json  balanced_evaluation_queries_20.json  llm_judge_results-hybrid-granite.json  llm_judge_results-jinarerank.json  llm_judge_results.json
crates/e2e-tests/fixtures/: graph_eval_queries.json  nushell_eval_queries.json
crates/e2e-tests/scripts/: llm_judge_eval.py  requirements.txt  setup_nushell_eval.sh
crates/e2e-tests/src/: eval_metrics.rs  lib.rs
crates/e2e-tests/tests/: graph_validation_test.rs  test_balanced_evaluation.rs  test_graph_search_evaluation.rs  test_init_and_index.rs  test_lsp_validation.rs  test_nushell_evaluation.rs  test_outbox_processor_e2e.rs  test_resolution_e2e.rs  test_semantic_search_eval.rs  test_spec_validation.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: api_provider.rs  bm25_provider.rs  code_tokenizer.rs  config.rs  embed_anything_provider.rs  error.rs  jina_provider.rs  lib.rs  mock_provider.rs  provider.rs  reranker.rs  sparse_provider.rs
crates/embeddings/tests/: integration_tests.rs  local_embeddings_tests.rs  reranker_tests.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: background_updater.rs  catch_up_indexer.rs  config.rs  entity_processor.rs  event_batcher.rs  file_change_processor.rs  git_provider.rs  lib.rs  repository_indexer.rs
crates/indexer/tests/: integration_test.rs
crates/languages/: Cargo.toml  build.rs
crates/languages/docs/: new-language-onboarding.md
crates/languages/specs/: javascript.yaml  rust.yaml  typescript.yaml
crates/languages/src/: extract_context.rs  extraction_framework.rs  handler_engine.rs  handler_registry.rs  lib.rs  predicates.rs  qualified_name.rs  queries.rs  transport.rs  unified_extractor.rs
crates/languages/tests/: graph_eval.rs  javascript_integration_test.rs  javascript_tsg_eval_test.rs  python_integration_test.rs  python_tsg_eval_test.rs  rust_extraction_test.rs  tsg_evaluation_test.rs  typescript_integration_test.rs  typescript_tsg_eval_test.rs
crates/lsp-validation/: Cargo.toml
crates/lsp-validation/src/: lib.rs  lsp_client.rs  metrics.rs  report.rs  validation.rs
crates/mcp/: Cargo.toml
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: error.rs  lib.rs  output_formatter.rs  repository_inference.rs  server.rs  tool.rs
crates/mcp/src/: handlers.rs  lib.rs
crates/outbox-processor/: Cargo.toml
crates/outbox-processor/src/: config.rs  generic_resolver.rs  lib.rs  main.rs  neo4j_relationship_resolver.rs  processor.rs
crates/outbox-processor/tests/: integration_tests.rs
crates/reranking/: Cargo.toml
crates/reranking/src/: error.rs  jina.rs  lib.rs  vllm.rs
crates/reranking/tests/: reranker_tests.rs
crates/server/: Cargo.toml
crates/server/src/: catch_up.rs  file_watcher.rs  graph_queries.rs  lib.rs  mcp_server.rs  rest_server.rs  storage_init.rs
crates/server/tests/: concurrency_tests.rs  graph_queries_test.rs  rest_api_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: collection_manager.rs  error.rs  factory.rs  lib.rs  mock.rs
crates/storage/tests/: factory_test.rs  neo4j_integration_test.rs  postgres_error_handling_test.rs  postgres_integration_test.rs  qdrant_integration_test.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: config.rs  debouncer.rs  events.rs  git.rs  ignore.rs  lib.rs  watcher.rs
crates/watcher/tests/: integration_test.rs
evals/: Cargo.toml
evals/data/: llm_judge_results-baseline+formatting-improvements.json  llm_judge_results-hybrid-no-agent.json  llm_judge_results-jina-embeddings-v3.json  nushell_hybrid_eval.json  nushell_semantic_eval.json
evals/src/: lib.rs
evals/tests/: test_semantic_search_eval.rs
tests/: Cargo.toml  RERANKING_EVALUATION.md  label_queries.py  label_queries_20_29.py
tests/data/: evaluation_queries.json  ground_truth_evaluation.json  ground_truth_reranking.json  labeling_data.json  realistic_queries.json  realistic_query_results.json
tests/src/: lib.rs
tests/src/common/: assertions.rs  cleanup.rs  containers.rs  fixtures.rs  logging.rs  (+1 more)
tests/tests/: benchmarks.rs  test_balanced_evaluation.rs  test_collect_evaluation_candidates.rs  test_deletion_flow.rs  test_embedding_bug_fix.rs  test_entity_invalidation.rs  test_generate_evaluation_data.rs  test_hybrid_search_evaluation.rs  test_init_and_index.rs  test_init_command.rs  test_outbox_processor_e2e.rs  test_reranking_evaluation.rs  test_retry_logic.rs
(+326 files in other folders)
