[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/languages",
    "crates/languages-macros",
    "crates/embeddings",
    "crates/reranking",
    "crates/watcher",
    "crates/cli",
    "crates/indexer",
    "crates/storage",
    "crates/server",
    "crates/outbox-processor",
    "crates/e2e-tests",
]

[workspace.metadata]
default-run = "codesearch"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["Logan Moon"]
license = "MIT"
repository = "https://github.com/loganmoon/codesearch"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching and Git
notify = "6.1"
git2 = "0.19"
glob = "0.3"
dashmap = "6.1"

# File system utilities
which = "6.0"
fs4 = "0.11"

# Progress indicators
indicatif = "0.17"

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Testing
pretty_assertions = "1.4"
tempfile = "3.14"

# Tree-sitter dependencies
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1.18.1", features = ["v5"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
