[package]
name = "codesearch-evals"
version = "0.1.0"
edition = "2021"
description = "Retrieval and search evaluation tools for codesearch"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "extract_eval_candidates"
path = "src/bin/extract_eval_candidates.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
