[package]
name = "codesearch-e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Workspace crates
codesearch-core = { path = "../crates/core" }
codesearch-storage = { path = "../crates/storage" }
codesearch-indexer = { path = "../crates/indexer" }
codesearch-embeddings = { path = "../crates/embeddings" }
codesearch-watcher = { path = "../crates/watcher" }
codesearch-outbox-processor = { path = "../crates/outbox-processor" }

# Test dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
glob = { workspace = true }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
chrono = "0.4"
