[package]
name = "codesearch-api-service"
version.workspace = true
edition.workspace = true

[features]
openapi = ["utoipa", "codesearch-core/openapi"]

[dependencies]
# Core dependencies
codesearch-core = { path = "../core" }
codesearch-storage = { path = "../storage" }
codesearch-embeddings = { path = "../embeddings" }
codesearch-indexer = { path = "../indexer" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
tracing = { workspace = true }
ordered-float = "5.0"

# OpenAPI schema generation
utoipa = { version = "5.3.1", features = ["uuid"], optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
