[package]
name = "codesearch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codesearch"
path = "src/main.rs"

[dependencies]
codesearch-core = { path = "../core" }
codesearch-storage = { path = "../storage" }
codesearch-embeddings = { path = "../embeddings" }
codesearch-watcher = { path = "../watcher" }
codesearch-languages = { path = "../languages" }
indexer = { path = "../indexer" }

# CLI framework
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Progress indicators
indicatif = { workspace = true }

# MCP protocol support
rmcp = { version = "0.8", features = ["server"] }

# File system utilities
glob = { workspace = true }

# HTTP client for health checks
reqwest = { version = "0.11", features = ["json"] }

# Database
sqlx = { workspace = true }