[package]
name = "codesearch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codesearch"
path = "src/main.rs"

[dependencies]
codesearch-core = { path = "../core" }
codesearch-storage = { path = "../storage" }
codesearch-embeddings = { path = "../embeddings" }
codesearch-reranking = { path = "../reranking" }
codesearch-watcher = { path = "../watcher" }
codesearch-languages = { path = "../languages" }
codesearch-server = { path = "../server" }
codesearch-indexer = { path = "../indexer" }
codesearch-outbox-processor = { path = "../outbox-processor" }

# CLI framework
clap = { workspace = true }
dialoguer = "0.11.0"

# UUID
uuid = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# File system utilities
glob = { workspace = true }
fs2 = "0.4"  # For file locking
dirs = "5.0"  # For home directory detection
walkdir = "2.5.0"  # For recursive directory traversal
sha2 = "0.10.8"  # For hash calculation

# HTTP client for health checks
reqwest = { version = "0.11", features = ["json"] }

# Database
sqlx = { workspace = true }

# HTTP server for REST API
axum = "0.8"

[dev-dependencies]
tempfile = "3.14.0"