[package]
name = "codesearch-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.83"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
dirs = "5.0"
uuid = { workspace = true }

# For immutable data structures
im = { version = "15.1", features = ["serde"] }
# For builder pattern generation
derive_builder = "0.20"
# For language enumeration
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
# For fast hashing
twox-hash = { version = "2.1", features = ["xxhash3_128"] }
# For tree-sitter node position conversion
tree-sitter = { workspace = true }

# Optional OpenAPI support
utoipa = { version = "5.3", optional = true }

[features]
openapi = ["utoipa"]

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }