[package]
name = "codesearch-e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

# Note: This crate is excluded from the main workspace to avoid
# compiling during normal builds. Run explicitly with:
#   cargo test --manifest-path crates/e2e-tests/Cargo.toml -- --ignored

[[bin]]
name = "extract_eval_candidates"
path = "src/bin/extract_eval_candidates.rs"

[dependencies]
# Workspace crates (path dependencies still work when excluded)
codesearch-core = { path = "../core" }
codesearch-storage = { path = "../storage" }
codesearch-indexer = { path = "../indexer" }
codesearch-embeddings = { path = "../embeddings" }
codesearch-reranking = { path = "../reranking" }
codesearch-watcher = { path = "../watcher" }
codesearch-outbox-processor = { path = "../outbox-processor" }

# Test dependencies (explicit versions since not in workspace)
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
tempfile = "3.14"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "uuid", "chrono", "json", "migrate"] }
glob = "0.3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
chrono = "0.4"
regex = "1.11"
walkdir = "2.5"

# SCIP parsing for graph validation
scip = "0.6"
protobuf = "3.7"
