[package]
name = "codesearch-embeddings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codesearch-core = { path = "../core" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-openai = "0.29.3"

# Additional dependencies
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.20.2"
parking_lot = "0.12.3"
crossbeam-channel = "0.5.14"
async-trait = "0.1.83"

