[package]
name = "codesearch-embeddings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codesearch-core = { path = "../core" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-openai = "0.29.3"
futures = "0.3"
reqwest = "0.12.12"

# Additional dependencies
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1.83"

[dev-dependencies]
codesearch-indexer = { path = "../indexer" }
