[package]
name = "codesearch-embeddings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
mkl = ["candle-core/mkl"]
accelerate = ["candle-core/accelerate"]
granite-sparse = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers", "safetensors", "dirs"]

[dependencies]
codesearch-core = { path = "../core" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-openai = "0.29.3"
futures = "0.3"
reqwest = "0.12.12"

# Additional dependencies
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1.83"
bm25 = { version = "2.3", default-features = false }
unicode-segmentation = "1.12"

# Candle ML framework (optional, for Granite sparse embeddings)
candle-core = { version = "0.9.2-alpha.2", optional = true }
candle-nn = { version = "0.9.2-alpha.2", optional = true }
candle-transformers = { version = "0.9.2-alpha.2", optional = true }
hf-hub = { version = "0.4.3", optional = true }
tokenizers = { version = "0.22.1", optional = true }
safetensors = { version = "0.5", optional = true }
dirs = { version = "6.0", optional = true }

[dev-dependencies]
codesearch-indexer = { path = "../indexer" }
