[package]
name = "codesearch-languages"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codesearch-core = { path = "../core" }
codesearch-languages-macros = { path = "../languages-macros" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
im = { version = "15.1", features = ["serde"] }
streaming-iterator = "0.1"
inventory = "0.3"
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = { workspace = true }
git2 = "0.19"
tempfile = "3.14"