[package]
name = "codesearch-outbox-processor"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "outbox-processor"
path = "src/main.rs"

[dependencies]
codesearch-core = { path = "../core" }
codesearch-storage = { path = "../storage" }
tokio = { version = "1.43", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "uuid", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1"
chrono = "0.4"
dashmap = "6.1.0"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
