[package]
name = "codesearch-reranking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codesearch-core = { path = "../core" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1.83"
futures = { workspace = true }

[dev-dependencies]
codesearch-indexer = { path = "../indexer" }
