[package]
name = "codesearch-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates
codesearch-core = { path = "../core" }
codesearch-storage = { path = "../storage" }
codesearch-embeddings = { path = "../embeddings" }
codesearch-watcher = { path = "../watcher" }
codesearch-languages = { path = "../languages" }
codesearch-indexer = { path = "../indexer" }

# External dependencies from workspace
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
sqlx.workspace = true

# MCP protocol (not in workspace)
rmcp = { version = "0.8", features = ["server"] }
serde_json = "1.0"
uuid = "1.18"
schemars = "1.0"

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
