[package]
name = "codesearch-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["openapi"]
openapi = ["utoipa", "utoipa-swagger-ui", "codesearch-core/openapi"]

[dependencies]
# Workspace crates
codesearch-core = { path = "../core", features = ["openapi"] }
codesearch-storage = { path = "../storage" }
codesearch-embeddings = { path = "../embeddings" }
codesearch-reranking = { path = "../reranking" }
codesearch-watcher = { path = "../watcher" }
codesearch-languages = { path = "../languages" }
codesearch-indexer = { path = "../indexer" }
codesearch-agentic-search = { path = "../agentic-search" }

# External dependencies from workspace
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
sqlx.workspace = true
async-trait.workspace = true

serde_json = "1.0"
uuid = "1.18"
schemars = "1.0"
futures = "0.3"
ordered-float = "5.0"
regex = "1.11"

# HTTP server for REST API
axum = "0.8.6"
tower = "0.5.2"
http-body-util = "0.1.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

# OpenAPI
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid"], optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"], optional = true }

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
