[package]
name = "codesearch-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
codesearch-core = { path = "../core" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qdrant-client = "1.10"
tonic = "0.11"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync"] }
sqlx = { workspace = true }
chrono = "0.4"
tracing = { workspace = true }

[dev-dependencies]
codesearch-e2e-tests = { path = "../../tests" }
tokio = { version = "1", features = ["full", "test-util"] }