[package]
name = "codesearch-watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codesearch-core = { path = "../core" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
git2 = { workspace = true }
glob = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"